# fast_zero

./: .env.example  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 46eaae30d094_create_users_table.py
src/fast_zero/: app.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_models.py
